--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- PDFMake for Boardroom PDF Export -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script>
+      if (window.pdfMake) {
+        console.log('[pdfMake] window.pdfMake at load:', window.pdfMake);
+      } else {
+        console.error('[pdfMake] window.pdfMake is NOT available at load');
+      }
+    </script>
   </body>
 </html>
